--- a/demo/yxmall/index.html
+++ b/demo/yxmall/index.html
@@ -49,7 +49,7 @@
     <!--E loader-->
 
     <div id="xoview-common-search" class="mod_search hide">
-        <div class="mod_search_bg"></div>
+        <div id="J_mod_search_bg" class="mod_search_bg"></div>
         <div class="mod_search_bd">
             <div class="mod_search_iptwrap">
                 <i class="mod_search_ico"></i>
