--- a/demo/yxmall/html/pages/search/index.html
+++ b/demo/yxmall/html/pages/search/index.html
@@ -6,7 +6,12 @@
             <div class="mod_bar_back"><a href="#page/home"><i></i></a></div>
 
             <div class="mod_search">
-                <div class="mod_search_inner"><i class="mod_search_ico"></i><input value="U盘" type="text" placeholder="品类 品牌 关键字"></div>
+                <div class="mod_search_bd">
+                    <div class="mod_search_iptwrap">
+                        <i class="mod_search_ico"></i>
+                        <input type="text" class="mod_search_ipt" placeholder="品类 品牌 关键字"/>
+                    </div>
+                </div>
             </div>
 
         </div>
@@ -15,6 +20,14 @@
 
             <!--S 页面内容-->
             <div class="mod_page search_result_page">
+
+                <div class="brands_act">
+                    <a href="javascript:;" target="_blank">
+                        <img src="http://pics2.paipaiimg.com/update/20131213/index_043348217.jpg" alt="">
+                        <h3>adidas阿迪达斯</h3>
+                        <p>正在参加品牌特卖<span>点击查看</span></p>
+                    </a>
+                </div>
 
                 <div class="goods2">
                     <a href="#" class="goods2_img">
