--- a/demo/yxmall/index.html
+++ b/demo/yxmall/index.html
@@ -24,7 +24,7 @@
     <!-- 注：当前导航加类名 current mod_nav_inner需js计算宽度-->
         <ul class="mod_nav_inner" data-control="slideTab">
             <li><a href="#page/home/daily"><strong>一日一品</strong></a></li>
-            <li class="current"><a href="#page/home"><strong>精选商品</strong></a></li>
+            <li class="current"><a href="#page/home/index"><strong>精选商品</strong></a></li>
             <li><a href="#page/home/baby"><strong>妈妈宝贝</strong></a></li>
             <li><a href="#page/home/guang"><strong>逛逛</strong></a></li>
             <li><a href="#page/home/faxian"><strong>发现发现</strong></a></li>
@@ -99,6 +99,7 @@
 
     <script src="js/views/common/search.js"></script>
     <script src="js/plugins/navslide.js"></script>
+    <script src="js/plugins/swipepager.js"></script>
 
     <script>
         $(document).ready(function(){
