--- a/demo/yxmall/index.html
+++ b/demo/yxmall/index.html
@@ -45,7 +45,11 @@
     <!--E 遮罩-->
 
     <!--S loader-->
-    <div id="xoview-common-loader" class="xo_loader"><div class="xo_loader_animate"><span></span><span></span><span></span></div></div>
+    <div id="xoview-common-loader" class="xo_loader">
+        <div class="mod_loading">
+            <div class="mod_loading_gif"></div>
+        </div>
+    </div>
     <!--E loader-->
 
     <div id="xoview-common-search" class="mod_search hide">
