--- a/demo/yxmall/index.html
+++ b/demo/yxmall/index.html
@@ -102,7 +102,7 @@
     <script src="js/views/search/index.js"></script>
 
     <script src="js/views/common/search.js"></script>
-    <script src="js/plugins/navslide.js"></script>
+    <script src="js/plugins/navslide.js?v=20131213"></script>
     <script src="js/plugins/swipepager.js"></script>
 
     <script>
