--- a/demo/yxmall/html/pages/home/pinpai.html
+++ b/demo/yxmall/html/pages/home/pinpai.html
@@ -1,11 +1,13 @@
 <!--XO Page Layout-->
-<article id="xoview-home-pinpai" class="xo_page xo_page1">
+<article id="xoview-home-pinpai" class="xo_page xo_page1 page_pinpai">
     <div class="xo_page_inner">
         <section class="xo_section xo_scroll current">
 
             <!--S 页面内容-->
             <div class="mod_page">
-                <h1>TODO：套网购的页面</h1>
+                <div class="mod_page_inner">
+                <iframe src="http://mm.wanggou.com/brand_list.shtml" frameborder="0" scrolling="no"></iframe>
+                </div>
             </div>
             <!--E 页面内容-->
 
