set default animation to slideleft

--- a/demo/yxmall/index.html
+++ b/demo/yxmall/index.html
@@ -28,7 +28,7 @@
             <li><a href="#page/home/baby"><strong>妈妈宝贝</strong></a></li>
             <li><a href="#page/home/guang"><strong>逛逛</strong></a></li>
             <li><a href="#page/home/faxian"><strong>发现发现</strong></a></li>
-            <li><a href="#page/home/pinpai"><strong>品牌特卖</strong></a></li>
+            <!--<li><a href="#page/home/pinpai"><strong>品牌特卖</strong></a></li>-->
         </ul>
     </div>
     <div class="mod_nav_sub">
@@ -109,7 +109,7 @@
         $(document).ready(function(){
             XO.App.init({
                 debug:true,
-                defaultAnimation:'none'
+                defaultAnimation:'slideleft'
             });
             $('#J_navslide').navSlide({
                 index:1
