--- a/demo/html/pages/mall/index - 副本.html
+++ b/demo/html/pages/mall/index - 副本.html
@@ -6,45 +6,20 @@
             <nav data-plugin="menu" data-plugin-id="menu-top" class="mod_nav">
                 <div class="mod_nav_outer">
                     <div class="mod_nav_inner">
-                        <a data-page="1" href="#" class="on">一日一品</a>
-                        <a data-action='homepage.turnPage' data-page="2" href="#">精选商品</a>
-                        <a data-action='homepage.turnPage' data-page="3" href="#">品牌特卖</a>
-                        <a data-action='homepage.turnPage' data-page="4" href="#">妈咪宝贝</a>
-                        <a data-action='homepage.turnPage' data-page="5" href="#">逛逛</a>
                         <a data-action='homepage.turnPage' data-page="1" href="#">一日一品</a>
                         <a data-action='homepage.turnPage' data-page="2" href="#">精选商品</a>
-                        <a data-action='homepage.turnPage' data-page="3" href="#">品牌特卖</a>
+                        <a data-action='homepage.turnPage' data-page="3" href="#" class="on">品牌特卖</a>
                         <a data-action='homepage.turnPage' data-page="4" href="#">妈咪宝贝</a>
                         <a data-action='homepage.turnPage' data-page="5" href="#">逛逛</a>
                     </div>
                 </div>
             </nav>
-            <!--div class="demo_item_bd" style="padding:0;">
-                <div class="row">
-                    <div class="mod_bar" style="margin-top:15px;">
-                        <div class="mod_bar_back"><a href="#"><i></i></a></div>
-                        <div class="mod_bar_center">
-                            <ul class="mod_bar_tab" id="J_nav">
-                                <li class="current"><span>商品</span></li>
-                                <li><span>详情</span></li>
-                                <li><span>评价</span></li>
-                                <li><span>参数</span></li>
-                            </ul>
-                        </div>
-                     </div>
-                </div>
-             </div-->
-
-
-
-
-
             <a href="#page/home" data-back="page/home" class="navbar-btn btn_back pull-left">&lt;&lt;返回</a>
         </header>
         <!--E header-->
         <div class="card" id="card" data-max="2" data-min="-2" data-plugin="swipeview" data-plugin-id="swiper">
             <section class="xo_section xo_scroll view_1" data-plugin="loadmore" data-plugin-id="pager-1">
-                <div class="pager">5555</div>
+                <div class="pager"></div>
             </section>
             <section class="xo_section xo_scroll view_2" data-plugin="loadmore" data-plugin-id="pager-2">
                 <div class="pager">
@@ -101,7 +76,7 @@
                 </div>
             </section>
             <section class="xo_section xo_scroll view_3" data-plugin="loadmore" data-plugin-id="pager-3">
-                <div class="pager">6666</div>
+                <div class="pager"></div>
             </section>
         </div>
     </div>
