--- a/demo/yxmall/html/pages/home/pinpai.html
+++ b/demo/yxmall/html/pages/home/pinpai.html
@@ -5,9 +5,12 @@
 
             <!--S 页面内容-->
             <div class="mod_page">
+                <!--
                 <div class="mod_page_inner">
                 <iframe src="http://mm.wanggou.com/brand_list.shtml" frameborder="0" scrolling="no"></iframe>
                 </div>
+                -->
+                TODO:待接入
             </div>
             <!--E 页面内容-->
 
