--- a/demo/yxmall1/index.html
+++ b/demo/yxmall1/index.html
@@ -29,12 +29,12 @@
         <!-- 注：当前导航加类名 current mod_nav_inner需js计算宽度-->
         <div class="mod_nav_outer">
             <ul class="mod_nav_inner" data-control="slideTab">
-                <li data-tpl="daily"><a href="javascript:;"><strong>一日一品</strong></a></li>
                 <li data-tpl="jx" class="current"><a href="javascript:;"><strong>精选商品</strong></a></li>
+                <li data-tpl="pinpai"><a href="javascript:;"><strong>品牌特卖</strong></a></li>
+                <li data-tpl="daily"><a href="javascript:;"><strong>一日一品</strong></a></li>
                 <li data-tpl="baby" ><a href="javascript:;"><strong>妈妈宝贝</strong></a></li>
                 <li data-tpl="guang" ><a href="javascript:;"><strong>逛逛</strong></a></li>
                 <li data-tpl="faxian" ><a href="javascript:;"><strong>发现发现</strong></a></li>
-                <!--li data-tpl="pinpai"><a href="javascript:;"><strong>品牌特卖</strong></a></li-->
             </ul>
         </div>
     </div>
