--- a/demo/yxmall/index.html
+++ b/demo/yxmall/index.html
@@ -114,7 +114,7 @@
     <script src="../../src/js/libs/underscore-min.js"></script>
     <script src="../../src/js/libs/backbone-min.js"></script>
     <script src="../../dist/js/xo.min.js"></script>
-    <script src="js/yxmall.min.js"></script>
+    <script src="js/yxmall.debug.js"></script>
 
     <script>
         XO.App.init({
