--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <title>xo.js</title>
     <link rel="stylesheet" href="src/css/xo.css?v=20131209" />
     <link rel="stylesheet" href="src/css/xo.bootstrap.css" />
-    <link rel="stylesheet" href="demo/css/style.css" />
-	<link rel="stylesheet" href="demo/css/menu.css" />
-    <link rel="stylesheet" href="demo/css/loadmore.css" />
-    <link rel="stylesheet" href="demo/css/swipeview.css" />
+    <link rel="stylesheet" href="demo/helloword/css/style.css" />
+	<link rel="stylesheet" href="demo/helloword/css/menu.css" />
+    <link rel="stylesheet" href="demo/helloword/css/loadmore.css" />
+    <link rel="stylesheet" href="demo/helloword/css/swipeview.css" />
 
 </head>
-<body data-viewdir="demo/html/pages/">
+<body data-viewdir="demo/helloword/html/pages/">
 
 
     <!--S 遮罩-->
@@ -35,7 +35,6 @@
     <script src="src/js/libs/fastclick.js"></script>
     <script src="src/js/libs/iscroll.js"></script>
     <script src="src/js/libs/zepto.min.js"></script>
-    <script src="src/js/libs/zepto.fx.js"></script>
     <script src="src/js/libs/underscore-min.js"></script>
     <script src="src/js/libs/backbone-min.js"></script>
     <script src="src/js/libs/hogan-2.0.0.js"></script>
@@ -59,19 +58,19 @@
     <script src="src/js/modules/xo.app.js"></script>
     
     <!--app biz code-->
-    <script src="demo/js/controllers/home.js"></script>
-    <script src="demo/js/views/home/index.js"></script>
-    <script src="demo/js/views/home/page1.js"></script>
-    <script src="demo/js/views/home/page2.js"></script>
-    <script src="demo/js/views/home/page3.js"></script>
-    <script src="demo/js/views/home/page4.js"></script>
-    <script src="demo/js/views/home/page5.js"></script>
+    <script src="demo/helloword/js/controllers/home.js"></script>
+    <script src="demo/helloword/js/views/home/index.js"></script>
+    <script src="demo/helloword/js/views/home/page1.js"></script>
+    <script src="demo/helloword/js/views/home/page2.js"></script>
+    <script src="demo/helloword/js/views/home/page3.js"></script>
+    <script src="demo/helloword/js/views/home/page4.js"></script>
+    <script src="demo/helloword/js/views/home/page5.js"></script>
 
-    <script src="demo/js/controllers/mall.js"></script>
-    <script src="demo/js/views/mall/index.js"></script>
+    <script src="demo/helloword/js/controllers/mall.js"></script>
+    <script src="demo/helloword/js/views/mall/index.js"></script>
 
-    <script src="demo/js/controllers/about.js"></script>
-    <script src="demo/js/views/about/index.js"></script>
+    <script src="demo/helloword/js/controllers/about.js"></script>
+    <script src="demo/helloword/js/views/about/index.js"></script>
 
     <script>
         $(document).ready(function(){
