fix navslide's bug

--- a/demo/yxmall/html/pages/home/pinpai.html
+++ b/demo/yxmall/html/pages/home/pinpai.html
@@ -10,7 +10,7 @@
                 <iframe src="http://mm.wanggou.com/brand_list.shtml" frameborder="0" scrolling="no"></iframe>
                 </div>
                 -->
-                TODO:待接入
+                <h2 style="padding:60px;">TODO:待接入</h2>
             </div>
             <!--E 页面内容-->
 
