remove the dependences of Backbone

--- a/demo/helloword/html/about/index.html
+++ b/demo/helloword/html/about/index.html
@@ -3,16 +3,16 @@
         <!--S header-->
         <header class="navbar navbar-default navbar-static-top" role="banner">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#page/about">XO WebApp框架 <span id="J_version"></span></a>
+                <a class="navbar-brand" href="#about">XO WAF <span id="J_version"></span></a>
             </div>
-            <a href="#page/home" data-back="page/home" class="navbar-btn pull-left"><span class="b_back"></span></a>
+            <a href="#home" data-back="home" class="navbar-btn pull-left"><span class="b_back"></span></a>
         </header>
         <!--E header-->
         <section class="xo_section xo_scroll current">
             <div class="container">
                 <div class="page-header"><h1>概述</h1></div>
                 <p class="lead">XO是为构建WebApp而设计的前端MVC框架。</p>
-                <p>如果你熟悉Backbone框架，使用XO将变得熟悉而简单。因为XO的URL路由控制器基于Backbone.Router，视图基于Backbone.View，附带一系列常用的视图转换效果。</p>
+                <p>如果你熟悉Backbone框架，使用XO将变得熟悉而简单。因为XO的URL路由控制器的实现参考自Backbone.Router，视图的实现则参考自Backbone.View，附带一系列常用的视图转换效果。</p>
                 <p>XO使用<a href="http://zeptojs.com" target="_blank">Zepto</a>作为Dom库，并推荐<a href="http://twitter.github.io/hogan.js/" target="_blank">Hogan</a>作为模板引擎。</p>
                 <p>当然你可以重写XO.toHtml方法从而使用你自己喜爱的模板引擎，<a href="http://mustache.github.com" target="_blank">mustache</a>也是不错的选择。</p>
                 <p>
