--- a/demo/helloword/html/home/index.html
+++ b/demo/helloword/html/home/index.html
@@ -4,7 +4,7 @@
         <!--S header-->
         <header class="navbar navbar-default navbar-static-top" role="banner">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#pages/home">XO WebApp Framework</a>
+                <a class="navbar-brand" href="#home">XO WebApp Framework</a>
             </div>
         </header>
         <!--E header-->
@@ -36,19 +36,19 @@
             </div>
 
             <div class="sy_nav">
-                <a href="#page/home/page1">
+                <a href="#home/page1">
                     <i class="ico_search"></i>
                     <strong>搜索</strong>
-                <a href="#page/home/page2">
+                <a href="#home/page2">
                     <i class="ico_browser"></i>
                     <strong>浏览</strong>
-                <a href="#page/mall">
+                <a href="#mall">
                     <i class="ico_fav"></i>
                     <strong>易迅商城</strong>
                 <a>
                     <i class="ico_account"></i>
                     <strong>账户</strong>
-                <a href="#page/about">
+                <a href="#about">
                     <i class="ico_about"></i>
                     <strong>关于XO</strong>
                 </a>
