--- a/demo/helloword/html/home/page1.html
+++ b/demo/helloword/html/home/page1.html
@@ -5,42 +5,42 @@
         <header class="navbar navbar-default navbar-static-top" role="banner">
             <div class="mod_search_form">
                 <input type="input" />
-                <button type="button" data-back="page/home" class="bg1 b_back1">取消</button>
+                <button type="button" data-back="home" class="bg1 b_back1">取消</button>
             </div>
         </header>
         <!--E header-->
         <section class="xo_section xo_scroll current">
             <div class="mod_search_list">
                 <div class="mod_list mod_photo sh_list">
-                    <a href="#page/home/page5" class="mod_list_item">
+                    <a href="#home/page5" class="mod_list_item">
                         <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
                         <div class="mod_list_info">
                             <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
                             <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
                         </div>
                     </a>
-                    <a href="#page/home/page5" class="mod_list_item">
+                    <a href="#home/page5" class="mod_list_item">
                         <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
                         <div class="mod_list_info">
                             <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
                             <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
                         </div>
                     </a>
-                    <a href="#page/home/page5" class="mod_list_item">
+                    <a href="#home/page5" class="mod_list_item">
                         <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
                         <div class="mod_list_info">
                             <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
                             <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
                         </div>
                     </a>
-                    <a href="#page/home/page5" class="mod_list_item">
+                    <a href="#home/page5" class="mod_list_item">
                         <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
                         <div class="mod_list_info">
                             <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
                             <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
                         </div>
                     </a>
-                    <a href="#page/home/page5" class="mod_list_item">
+                    <a href="#home/page5" class="mod_list_item">
                         <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
                         <div class="mod_list_info">
                             <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
