--- a/demo/helloword/html/home/page2.html
+++ b/demo/helloword/html/home/page2.html
@@ -5,29 +5,29 @@
         <!--S header-->
         <header class="navbar navbar-default navbar-static-top" role="banner">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#pages/home/page2">产品浏览</a>
+                <a class="navbar-brand" href="#home/page2">产品浏览</a>
             </div>
-            <a href="#page/home" data-back="page/home" class="navbar-btn pull-left"><span class="b_back"></span></a>
+            <a href="#home" data-back="home" class="navbar-btn pull-left"><span class="b_back"></span></a>
         </header>
         <!--E header-->
         <section class="xo_section xo_scroll current">
 
             <div class="mod_list mod_photo sb_list">
-                <a href="#page/home/page3" class="mod_list_item">
+                <a href="#home/page3" class="mod_list_item">
                     <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
                     <div class="mod_list_info">
                         <h3>充值服务</h3>
                         <p>话费/Q币/网游/彩票/电影票</p>
                     </div>
                 </a>
-                <a href="#page/home/page3" class="mod_list_item">
+                <a href="#home/page3" class="mod_list_item">
                     <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
                     <div class="mod_list_info">
                         <h3>手机/笔记本</h3>
                         <p>手机/平板/电脑/硬件</p>
                     </div>
                 </a>
-                <a href="#page/home/page3" class="mod_list_item">
+                <a href="#home/page3" class="mod_list_item">
                     <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
                     <div class="mod_list_info">
                         <h3>数码家电</h3>
