--- a/demo/helloword/html/home/page3.html
+++ b/demo/helloword/html/home/page3.html
@@ -4,44 +4,44 @@
         <!--S header-->
         <header class="navbar navbar-default navbar-static-top" role="banner">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#page/home/page3">数码家电</a>
+                <a class="navbar-brand" href="#home/page3">数码家电</a>
             </div>
-            <a href="#page/home/page2" data-back="page/home/page2" class="navbar-btn pull-left"><span class="b_back"></span></a>
+            <a href="#home/page2" data-back="home/page2" class="navbar-btn pull-left"><span class="b_back"></span></a>
         </header>
         <!--E header-->
         <section class="xo_section xo_scroll current">
             <div class="mod_list">
-                <a href="#page/home/page4" class="mod_list_item">
+                <a href="#home/page4" class="mod_list_item">
                     <div class="mod_list_info">
                         <h3>摄影摄像</h3>
                     </div>
                 </a>
-                <a href="#page/home/page4" class="mod_list_item">
+                <a href="#home/page4" class="mod_list_item">
                     <div class="mod_list_info">
                         <h3>数码存储</h3>
                     </div>
                 </a>
-                <a href="#page/home/page4" class="mod_list_item">
+                <a href="#home/page4" class="mod_list_item">
                     <div class="mod_list_info">
                         <h3>家用电器</h3>
                     </div>
                 </a>
-                <a href="#page/home/page4" class="mod_list_item">
+                <a href="#home/page4" class="mod_list_item">
                     <div class="mod_list_info">
                         <h3>摄影配件</h3>
                     </div>
                 </a>
-                <a href="#page/home/page4" class="mod_list_item">
+                <a href="#home/page4" class="mod_list_item">
                     <div class="mod_list_info">
                         <h3>音频设备</h3>
                     </div>
                 </a>
-                <a href="#page/home/page4" class="mod_list_item">
+                <a href="#home/page4" class="mod_list_item">
                     <div class="mod_list_info">
                         <h3>网络设备</h3>
                     </div>
                 </a>
-                <a href="#page/home/page4" class="mod_list_item">
+                <a href="#home/page4" class="mod_list_item">
                     <div class="mod_list_info">
                         <h3>配件服务</h3>
                     </div>
