--- a/demo/helloword/html/home/page5.html
+++ b/demo/helloword/html/home/page5.html
@@ -5,9 +5,9 @@
         <!--S header-->
         <header class="navbar navbar-default navbar-static-top" role="banner">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#pages/home/page5">产品详情</a>
+                <a class="navbar-brand" href="#home/page5">产品详情</a>
             </div>
-            <a href="#page/home/page4" data-back="page/home/page4" class="navbar-btn pull-left"><span class="b_back"></span></a>
+            <a href="#home/page4" data-back="home/page4" class="navbar-btn pull-left"><span class="b_back"></span></a>
         </header>
         <!--E header-->
         <section class="xo_section xo_scroll current">
