--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="src/css/xo.css?v=20131209" />
     <link rel="stylesheet" href="src/css/xo.bootstrap.css" />
     <link rel="stylesheet" href="demo/helloword/css/style.css" />
-	<link rel="stylesheet" href="demo/helloword/css/menu.css" />
+    <link rel="stylesheet" href="demo/helloword/css/menu.css" />
     <link rel="stylesheet" href="demo/helloword/css/loadmore.css" />
     <link rel="stylesheet" href="demo/helloword/css/swipeview.css" />
 
 </head>
-<body data-viewdir="demo/helloword/html/pages/">
+<body data-viewdir="demo/helloword/html/">
 
 
     <!--S 遮罩-->
@@ -32,23 +32,23 @@
 
     <!--<script src="http://weinre.qq.com/target/target-script-min.js#levinhuang"></script>-->
     <!--3party libs-->
-    <script src="src/js/libs/fastclick.js"></script>
     <script src="src/js/libs/iscroll.js"></script>
     <script src="src/js/libs/zepto.min.js"></script>
-    <script src="src/js/libs/underscore-min.js"></script>
-    <script src="src/js/libs/backbone-min.js"></script>
     <script src="src/js/libs/hogan-2.0.0.js"></script>
 
     <!--XO framework-->
+    <script src="src/js/libs/fastclick.js"></script>
     <script src="src/js/xo.js"></script>
+    <script src="src/js/base/util.js"></script>
+    <script src="src/js/base/event.js"></script>
+    <script src="src/js/base/history.js"></script>
+    <script src="src/js/base/router.js"></script>
+    <script src="src/js/base/view.js"></script>
     <script src="src/js/modules/xo.constants.js"></script>
     <script src="src/js/modules/xo.media.js"></script>
     <script src="src/js/modules/xo.support.js"></script>
     <script src="src/js/modules/xo.event.js"></script>
     <script src="src/js/modules/xo.plugin.js"></script>
-    <script src="src/js/plugins/plugin_menu.js"></script>
-    <script src="src/js/plugins/plugin_loadmore.js"></script>
-    <script src="src/js/plugins/plugin_swipeview.js"></script>
     <script src="src/js/modules/xo.controller.js"></script>
     <script src="src/js/modules/xo.view.js"></script>
     <script src="src/js/modules/xo.view.mask.js"></script>
@@ -56,6 +56,10 @@
     <script src="src/js/modules/xo.router.js"></script>
     <script src="src/js/modules/xo.animate.js"></script>
     <script src="src/js/modules/xo.app.js"></script>
+
+    <script src="src/js/plugins/plugin_menu.js"></script>
+    <script src="src/js/plugins/plugin_loadmore.js"></script>
+    <script src="src/js/plugins/plugin_swipeview.js"></script>
     
     <!--app biz code-->
     <script src="demo/helloword/js/controllers/home.js"></script>
