--- a/demo/helloword/html/home/page4.html
+++ b/demo/helloword/html/home/page4.html
@@ -5,42 +5,42 @@
         <!--S header-->
         <header class="navbar navbar-default navbar-static-top" role="banner">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#pages/home/page4">产品列表</a>
+                <a class="navbar-brand" href="#home/page4">产品列表</a>
             </div>
-            <a href="#page/home/page3" data-back="page/home/page3" class="navbar-btn pull-left"><span class="b_back"></span></a>
+            <a href="#home/page3" data-back="home/page3" class="navbar-btn pull-left"><span class="b_back"></span></a>
         </header>
         <!--E header-->
         <section class="xo_section xo_scroll current">
             <div class="mod_list mod_photo sh_list">
-                <a href="#page/home/page5" class="mod_list_item">
+                <a href="#home/page5" class="mod_list_item">
                     <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
                     <div class="mod_list_info">
                         <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
                         <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
                     </div>
                 </a>
-                <a href="#page/home/page5" class="mod_list_item">
+                <a href="#home/page5" class="mod_list_item">
                     <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
                     <div class="mod_list_info">
                         <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
                         <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
                     </div>
                 </a>
-                <a href="#page/home/page5" class="mod_list_item">
+                <a href="#home/page5" class="mod_list_item">
                     <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
                     <div class="mod_list_info">
                         <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
                         <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
                     </div>
                 </a>
-                <a href="#page/home/page5" class="mod_list_item">
+                <a href="#home/page5" class="mod_list_item">
                     <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
                     <div class="mod_list_info">
                         <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
                         <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
                     </div>
                 </a>
-                <a href="#page/home/page5" class="mod_list_item">
+                <a href="#home/page5" class="mod_list_item">
                     <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
                     <div class="mod_list_info">
                         <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
