--- a/demo/yxmall/index.html
+++ b/demo/yxmall/index.html
@@ -20,19 +20,19 @@
     <link rel="stylesheet" href="css/yxmall.min.css" />
 
 </head>
-<body data-viewdir="html/pages/">
+<body data-viewdir="html/">
 
 
     <!--S header-->
     <div class="mod_nav nav_home" id="J_navslide">
     <!-- 注：当前导航加类名 current mod_nav_inner需js计算宽度-->
         <ul class="mod_nav_inner" data-control="slideTab">
-            <li class="current"><a href="#page/home/index"><strong>精选商品</strong></a></li>
-            <li><a href="#page/home/pinpai"><strong>品牌特卖</strong></a></li>
-            <li><a href="#page/home/daily"><strong>一日一品</strong></a></li>
-            <li><a href="#page/home/baby"><strong>妈妈宝贝</strong></a></li>
-            <li><a href="#page/home/guang"><strong>逛逛</strong></a></li>
-            <li><a href="#page/home/faxian"><strong>发现发现</strong></a></li>
+            <li class="current"><a href="#home/index"><strong>精选商品</strong></a></li>
+            <li><a href="#home/pinpai"><strong>品牌特卖</strong></a></li>
+            <li><a href="#home/daily"><strong>一日一品</strong></a></li>
+            <li><a href="#home/baby"><strong>妈妈宝贝</strong></a></li>
+            <li><a href="#home/guang"><strong>逛逛</strong></a></li>
+            <li><a href="#home/faxian"><strong>发现发现</strong></a></li>
         </ul>
     </div>
     <div class="mod_nav_sub">
@@ -111,9 +111,8 @@
     -->
 
     <script src="../../src/js/libs/zepto.min.js"></script>
-    <script src="../../src/js/libs/underscore-min.js"></script>
-    <script src="../../src/js/libs/backbone-min.js"></script>
-    <script src="../../dist/js/xo.min.js"></script>
+    <script src="../../src/js/libs/hogan-2.0.0.js"></script>
+    <script src="../../dist/js/xo.debug.js"></script>
     <script src="js/yxmall.debug.js"></script>
 
     <script>
