--- a/demo/yxmall/index.html
+++ b/demo/yxmall/index.html
@@ -27,12 +27,12 @@
     <div class="mod_nav nav_home" id="J_navslide">
     <!-- 注：当前导航加类名 current mod_nav_inner需js计算宽度-->
         <ul class="mod_nav_inner" data-control="slideTab">
-            <li class="current"><a href="#home/index"><strong>精选商品</strong></a></li>
-            <li><a href="#home/pinpai"><strong>品牌特卖</strong></a></li>
-            <li><a href="#home/daily"><strong>一日一品</strong></a></li>
-            <li><a href="#home/baby"><strong>妈妈宝贝</strong></a></li>
-            <li><a href="#home/guang"><strong>逛逛</strong></a></li>
-            <li><a href="#home/faxian"><strong>发现发现</strong></a></li>
+            <li class="current"><a href="#home/index" data-ridx="0"><strong>精选商品</strong></a></li>
+            <li><a href="#home/pinpai" data-ridx="1"><strong>品牌特卖</strong></a></li>
+            <li><a href="#home/daily" data-ridx="2"><strong>一日一品</strong></a></li>
+            <li><a href="#home/baby" data-ridx="3"><strong>妈妈宝贝</strong></a></li>
+            <li><a href="#home/guang" data-ridx="4"><strong>逛逛</strong></a></li>
+            <li><a href="#home/faxian" data-ridx="5"><strong>发现发现</strong></a></li>
         </ul>
     </div>
     <div class="mod_nav_sub">
