--- a/demo/yxmall/html/home/index.html
+++ b/demo/yxmall/html/home/index.html
@@ -39,6 +39,7 @@
                                 </div>
                             </div>
                         </div>
+                        <!--
                         <div class="goods">
                             <a href="javascript:;" class="goods_img">
                                 <img src="http://img2.icson.com/IcsonPic/Fixed_Template/525633-01.jpg" alt="">
@@ -56,7 +57,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div href="javascript:;" class="goods">
+                        <div class="goods">
                             <a href="javascript:;" class="goods_img">
                                 <img src="http://ecd.oa.com/600x300" alt="">
                             </a>
@@ -78,7 +79,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div href="javascript:;" class="goods">
+                        <div class="goods">
                             <a href="javascript:;" class="goods_img">
                                 <img src="http://ecd.oa.com/600x300" alt="">
                             </a>
@@ -100,7 +101,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div href="javascript:;" class="goods">
+                        <div class="goods">
                             <a href="javascript:;" class="goods_img">
                                 <img src="http://ecd.oa.com/600x500" alt="">
                             </a>
@@ -122,8 +123,9 @@
                                 </div>
                             </div>
                         </div>
+                        -->
                         
-                        <div class="mod_loading2">
+                        <div class="mod_loading2 hide">
                             <span class="mod_loading2_gif"></span>
                             <span class="mod_loading2_txt">加载中</span>
                         </div>
