--- a/demo/yxmall/html/home/pinpai.html
+++ b/demo/yxmall/html/home/pinpai.html
@@ -5,12 +5,45 @@
 
             <!--S 页面内容-->
             <div class="mod_page">
-                <!--
-                <div class="mod_page_inner">
-                <iframe src="http://mm.wanggou.com/brand_list.shtml" frameborder="0" scrolling="no"></iframe>
+
+                <div class="Act">
+                    <div class="mall_mod_brand mall_mod_brand_editor">
+                        <div class="mall_mod_brand_logo">
+                            <h3 class="mall_mod_brand_name">品牌特卖</h3>
+                            <div class="mall_mod_brand_ename">Editor's Choice</div>
+                        </div>
+                        <div class="mall_mod_brand_info">
+                            <p class="mall_mod_brand_txt">品牌特卖品牌特卖品牌特卖品牌特卖品牌特卖品牌特卖品牌特卖品牌特卖</p>
+                            <span class="mall_mod_brand_ldquo">&ldquo;</span>
+                            <span class="mall_mod_brand_rdquo">&rdquo;</span>
+                        </div>
+                    </div>
+                    <div class="glists">
+                        <div class="goods">
+                            <a href="javascript:;" class="goods_img">
+                                <img src="http://img2.icson.com/IcsonPic/Fixed_Template/525633-01.jpg" alt="">
+                            </a>
+                            <div class="goods_info">
+                                <a href="javascript:;" class="goods_name">幻响 i-ma 马到成功迷你创意音响 音箱 笔记本电脑小音箱 白色【带炫舞蓝灯】白马造型，马年马到成功！</a>
+                                <a href="javascript:;" class="goods_cuxiao">促销语啊促销语啊</a>
+                                <a href="javascript:;" class="goods_promo">
+                                    还有2个月就到马年了，这只小马驹一定让你的客户高兴，女友倾倒，让你的孩子尖叫起来！小马形象时尚可爱又带有马年马到成功的含义，是今年的送礼佳品。360度下潜式低音设计，低音浑厚，高音嘹亮，音域宽广，还有蓝色灯光会随音乐舞动起来！择日不如撞日，全网最低价赶快入手！
+                                </a>
+                                <p class="goods_price">
+                                    <span>微信价</span><b>&yen;78.00</b>
+                                </p>
+                                <p class="goods_price_old">
+                                    <del>市场价&yen;168.00</del>
+                                </p>
+                                <div class="goods_act">
+                                    <a href="javascript:;" class="mod_btn mod_btn_bg">立即购买</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
-                -->
-                <h2 style="padding:60px;">TODO:待接入</h2>
+                
             </div>
             <!--E 页面内容-->
 
