--- a/demo/yxmall/index.html
+++ b/demo/yxmall/index.html
@@ -54,6 +54,10 @@
     </div>
     <!--E loader-->
 
+    <div id="xoview-common-logger" class="xo_logger">
+        <div class="xo_logger_bd"></div>
+    </div>
+
     <div id="xoview-common-search" class="mod_search hide">
         <div id="J_mod_search_bg" class="mod_search_bg"></div>
         <div class="mod_search_bd">
