test on translateX

--- a/demo/yxmall/index.html
+++ b/demo/yxmall/index.html
@@ -68,7 +68,7 @@
         </div>
     </div>
 
-    <script src="http://weinre.qq.com/target/target-script-min.js#levinhuang"></script>
+    <!--<script src="http://weinre.qq.com/target/target-script-min.js#levinhuang"></script>-->
     <!--3party libs-->
     <!--
     <script src="../../src/js/libs/fastclick.js"></script>
