--- a/demo/yxmall/html/home/daily.html
+++ b/demo/yxmall/html/home/daily.html
@@ -1,5 +1,5 @@
 <!--XO Page Layout-->
-<article id="xoview-home-daily" class="xo_page">
+<article id="xoview-home-daily" class="xo_page xo_page1">
     <div class="xo_page_inner">
         <section class="xo_section xo_scroll current">
 
@@ -75,7 +75,7 @@
                     <div class="action2">
                         <a href="javascript:;" class="mod_btn mod_btn_bg4 action2_fav action2_fav_current">
                             <!-- 注：+1动画时，给b标签加class="moving" -->
-                            <i></i><span>8888888</span><b class="moving"></b>
+                            <i></i><span>8888888</span><b></b>
                         </a>
                         <a href="javascript:;" class="mod_btn mod_btn_bg action2_buy">查看详情</a>
                     </div>
@@ -132,7 +132,7 @@
                     <div class="action2">
                         <a href="javascript:;" class="mod_btn mod_btn_bg4 action2_fav action2_fav_current">
                             <!-- 注：+1动画时，给b标签加class="moving" -->
-                            <i></i><span>8888888</span><b class="moving"></b>
+                            <i></i><span>8888888</span><b></b>
                         </a>
                         <a href="javascript:;" class="mod_btn mod_btn_bg action2_buy">查看详情</a>
                     </div>
