--- a/demo/yxmall/index.html
+++ b/demo/yxmall/index.html
@@ -122,7 +122,7 @@
             debug:true,
             useTransform3D:true,
             useFastTouch:true,
-            defaultAnimation:'slideleft'
+            defaultAnimation:'pokerleft'
         });
         $('#J_navslide').navSlide({
             useCss3:true,
