--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="description" content="A lightweight webapp framework developed by [TENCENT ECC_UX_OS Team](http://ecd.tencent.com)" />
+    <meta name="description" content="A lightweight webapp framework developed by FASO.ME(http://faso.me)" />
     <meta name="keywords" content="webapp,xo,xo.js" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" />
     <meta name="apple-touch-fullscreen" content="yes" />
@@ -12,6 +12,7 @@
     <title>xo.js</title>
     <link rel="stylesheet" href="src/css/xo.css?v=20131209" />
     <link rel="stylesheet" href="src/css/xo.bootstrap.css" />
+    
     <link rel="stylesheet" href="demo/helloword/css/style.css" />
     <link rel="stylesheet" href="demo/helloword/css/menu.css" />
     <link rel="stylesheet" href="demo/helloword/css/loadmore.css" />
